test/bad/bool_initialization.lat
int main() {
	boolean b = 1;
}
